# snake-game

./: .gitignore  README.md  notes for ai plan.txt
Snake/: CMakeLists.txt  GameLogic.cpp  MenuOverlay.cpp  MenuOverlay.h  NameInputOverlay.cpp  NameInputOverlay.h  ScoreDB.cpp  ScoreboardOverlay.h  SnakeGame.cpp  SnakeGame.h  main.cpp
Snake/app/: SnakeGame.cpp  SnakeGame.h  SnakeGame.ui  SnakeGame_config.cpp  SnakeGame_config.h  SnakeGame_flow.cpp  SnakeGame_input.cpp  SnakeGame_scene.cpp
Snake/core/: GameLogic.cpp  GameLogic.h
Snake/data/: ScoreDB.h
Snake/ui/menu/: MenuOverlay.cpp  MenuOverlay.h
Snake/ui/scoreboard/: ScoreboardOverlay.cpp  ScoreboardOverlay.h
